# hadrian

./: README.md  TODO.md  boot.sh  pyproject.toml
hadrian/: __main__.py
hadrian/connections/: camera.py  chatgpt.py  database.py  rover.py
test/: test_camera.py  test_chatgpt.py  test_database.py  test_rover.py
web/: index.php  metrics.sqlite
